# polysync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  make_demo_audio.py
src/polysync/: __init__.py  audio.py  cli.py  sidecar.py  sync.py  verify.py
src/polysync/edit/: __init__.py  audiomix.py  autoedit.py  grade.py  render_cuts.py  render_pip.py
tests/: test_sync_synthetic.py
